--- a/src/www/index.html
+++ b/src/www/index.html
@@ -37,19 +37,19 @@
           <img src="./img/logo.png" width="32" class="inline align-middle" />
           <span class="align-middle">WireGuard</span>
         </h1>
-        <h2 class="text-sm text-gray-400 mb-10"></h2>
+        <h2 class="text-sm text-gray-400 mb-10">Flypig version</h2>
 
         <div v-if="latestRelease" class="bg-red-800 p-4 text-white text-sm font-small mb-10 rounded-md shadow-lg"
           :title="`v${currentRelease} → v${latestRelease.version}`">
           <div class="container mx-auto flex flex-row flex-auto items-center">
             <div class="flex-grow">
-              <p class="font-bold">There is an update available!</p>
+              <p class="font-bold">有一个更新可用!</p>
               <p>{{latestRelease.changelog}}</p>
             </div>
 
             <a href="https://github.com/WeeJeWel/wg-easy#updating" target="_blank"
               class="p-3 rounded-md bg-white float-right font-sm font-semibold text-red-800 flex-shrink-0 border-2 border-red-800 hover:border-white hover:text-white hover:bg-red-800 transition-all">
-              Update →
+              更新 →
             </a>
           </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="shadow-md rounded-lg bg-white overflow-hidden">
           <div class="flex flex-row flex-auto items-center p-3 px-5 border border-b-2 border-gray-100">
             <div class="flex-grow">
-              <p class="text-2xl font-medium">Clients</p>
+              <p class="text-2xl font-medium">客户端</p>
             </div>
             <div class="flex-shrink-0">
               <button @click="clientCreate = true; clientCreateName = '';"
@@ -67,7 +67,7 @@
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                 </svg>
-                <span class="text-sm">New</span>
+                <span class="text-sm">添加</span>
               </button>
             </div>
           </div>
@@ -280,7 +280,7 @@
 
             </div>
             <div v-if="clients && clients.length === 0">
-              <p class="text-center m-10 text-gray-400 text-sm">There are no clients yet.<br /><br />
+              <p class="text-center m-10 text-gray-400 text-sm">暂无客户端。<br /><br />
                 <button @click="clientCreate = true; clientCreateName = '';"
                   class="bg-red-800 text-white hover:bg-red-700 border-2 border-none py-2 px-4 rounded inline-flex items-center transition">
                   <svg class="w-4 mr-2" inline xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -288,7 +288,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                       d="M12 6v6m0 0v6m0-6h6m-6 0H6" />
                   </svg>
-                  <span class="text-sm">New Client</span>
+                  <span class="text-sm">添加客户端</span>
                 </button>
               </p>
             </div>
@@ -363,7 +363,7 @@
                   </div>
                   <div class="flex-grow mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                     <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-                      New Client
+                      创建客户端
                     </h3>
                     <div class="mt-2">
                       <p class="text-sm text-gray-500">
@@ -377,15 +377,15 @@
               <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                 <button v-if="clientCreateName.length" type="button" @click="createClient(); clientCreate = null"
                   class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-800 text-base font-medium text-white hover:bg-red-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm">
-                  Create
+                  创建
                 </button>
                 <button v-else type="button"
                   class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-gray-200 text-base font-medium text-white sm:ml-3 sm:w-auto sm:text-sm cursor-not-allowed">
-                  Create
+                  创建
                 </button>
                 <button type="button" @click="clientCreate = null"
                   class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-                  Cancel
+                  取消
                 </button>
               </div>
             </div>
@@ -437,12 +437,12 @@
                   </div>
                   <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                     <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-                      Delete Client
+                      删除客户端
                     </h3>
                     <div class="mt-2">
                       <p class="text-sm text-gray-500">
-                        Are you sure you want to delete <strong>{{clientDelete.name}}</strong>?
-                        This action cannot be undone.
+                        你确定要删除 <strong>{{clientDelete.name}}</strong>?
+                        此操作无法取消。
                       </p>
                     </div>
                   </div>
@@ -451,11 +451,11 @@
               <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                 <button type="button" @click="deleteClient(clientDelete); clientDelete = null"
                   class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
-                  Delete
+                  删除
                 </button>
                 <button type="button" @click="clientDelete = null"
                   class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">
-                  Cancel
+                  取消
                 </button>
               </div>
             </div>
