--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>WireGuard</title>
+  <title>WireGuard-Flypig</title>
   <link href="./css/vendor/tailwind.min.css" rel="stylesheet">
   <link rel="manifest" href="./manifest.json">
   <link rel="icon" type="image/png" href="./img/favicon.png">
